# life-ops-scripts

./: .bowtie_heartbeat.txt  .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  coverage.xml  deploy.sh  pip-audit.toml  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_demo.parquet
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  lychee.toml  size-label.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release-checklist.md
.github/workflows/: bowtie.yml  ci-cd-pipeline.yml  ci.yml  deploy.yml  generate-examples.yml  import-life-ops-scripts.yml  link-check.yml  lint.yml  pages.yml  path-guard.yml  pip-audit.yml  pr-labeler.yml  pr-size-labeler.yml  release-assets.yml  stale-branches-report.yml
.github/workflows-archive/: ci-cd-pipeline.yml  lint.yml
data/samples/: transactions_sample.csv
docs/: MAINTAINERS.md
docs/decisions/: ADR-001-use-adr-format.md  ADR_TEMPLATE.md  README.md
docs/examples/: in.csv  out.parquet  pq_handoff_sample.csv  schema.yaml  (+1 more)
sample/: Tiller_Transactions.csv
scripts/: csv2pq.py  generate_examples.py  index_patches.py
tests/: test_cash_flow_rollup_edges_extra.py  test_cash_rollup_edges.py  test_cash_rollup_monthly_branch.py  test_cash_rollup_smoke.py  test_import_smoke.py  test_normalize_tiller_csv_edges.py  test_normalize_tiller_main_paths.py  test_normalize_tiller_smoke.py  test_normalize_tiller_unit.py
(+5 files in other folders)
